--- a/.github/workflows/CompareScreenshotComment.yml
+++ b/.github/workflows/CompareScreenshotComment.yml
@@ -35,9 +35,9 @@ jobs:
         run: |
           echo "pull_request_number=$(cat NR)" >> "$GITHUB_OUTPUT"
 
-      - name: main checkout
+      - name: Checkout
         id: checkout-main
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.event.workflow_run.event.pull_request.base.ref }}
 
@@ -140,18 +140,10 @@ jobs:
 
       - name: Cleanup outdated companion branches
         run: |
-          # Find outdated companion branches with last commit date
           git branch -r --format="%(refname:lstrip=3)" | grep companion_ | while read -r branch; do
             last_commit_date_timestamp=$(git log -1 --format=%ct "origin/$branch")
             now_timestamp=$(date +%s)
-            # Delete branch if it's older than 1 month
-            # if [ $((now_timestamp - last_commit_date_timestamp)) -gt 2592000 ]; then
-            # For testing purpose, delete branch if it's older than 1 second
-            echo "branch: $branch now_timestamp: $now_timestamp last_commit_date_timestamp: $last_commit_date_timestamp"
-            if [ $((now_timestamp - last_commit_date_timestamp)) -gt 1 ]; then
-              # Comment out for demonstration purpose
-              echo "Deleting $branch"
-
-              # git push origin --delete "$branch"
+            if [ $((now_timestamp - last_commit_date_timestamp)) -gt 2592000 ]; then
+              git push origin --delete "$branch"
             fi
           done
