--- a/.github/workflows/StoreScreenshot.yml
+++ b/.github/workflows/StoreScreenshot.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - release/*
+      - topic/*
   pull_request:
 
 permissions: {}
@@ -19,13 +21,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
+      - name: set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          distribution: temurin
-          java-version: 17
+          java-version: '17'
+          distribution: 'adopt'
 
       # Better than caching and/or extensions of actions/setup-java
       - name: Setup Gradle
