--- a/.github/workflows/CompareScreenshot.yml
+++ b/.github/workflows/CompareScreenshot.yml
@@ -2,11 +2,13 @@ name: CompareScreenshot
 
 on:
   pull_request:
+    types: [opened, reopened, synchronize, ready_for_review]
 
 permissions: {}
 
 jobs:
   compare-screenshot-test:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
@@ -48,22 +50,6 @@ jobs:
           name: screenshot-diff
           path: |
             **/build/outputs/roborazzi
-          retention-days: 30
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ always() }}
-        with:
-          name: screenshot-diff-reports
-          path: |
-            **/build/reports
-          retention-days: 30
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ always() }}
-        with:
-          name: screenshot-diff-test-results
-          path: |
-            **/build/test-results
           retention-days: 30
 
       - name: Save PR number
