--- a/.github/workflows/end.yml
+++ b/.github/workflows/end.yml
@@ -10,7 +10,7 @@ on:
 permissions: { }
 
 jobs:
-  start1:
+  end1:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 20
