--- a/.github/workflows/end.yml
+++ b/.github/workflows/end.yml
@@ -18,4 +18,8 @@ jobs:
 
     steps:
       - name: end
-        run: echo "------end------"
+        run: |
+          echo "------end starts------"
+          sleep 30
+          echo "------end ends------"
+        
